# sampen_estimation

./: .gitignore  CMakeLists.txt  Makefile  OUTPUT  ex_gauss_sample-size_sample-num.sh  ex_sample-num.sh  ex_sample-size.sh  ex_sample-size_sample-num.sh  ex_time.sh  run_ex.sh  run_ex2.sh  run_ex3.sh  run_ex_m24_s001.sh  run_ex_m5_s001.sh
python/: sampenmodule.h  setup.py
result/: 213_sample-num_sample-size_wsl.txt
result/Instruments.trace/: open.creq
result/Instruments.trace/Trace1.run/: RunIssues.storedata
result/Instruments.trace/corespace/: MANIFEST.plist
result/linux/: output_m24_s001_O3_linux.txt  output_m24_s001_linux.txt  output_m5_s001_linux.txt
result/result_1210/: output.txt  output2.txt  output2_s01.txt  output3.txt  output_m5_s001.txt
result/wsl/: 217_time_m3_r30_sample-size2p11.txt  217_time_m4_r30_sample-size2p11.txt  217_time_m5_r30_sample-size2p11.txt  217_time_m6_r30_sample-size2p11.txt  218_gauss_sample-num_sample-size_m3_r30_2p17.txt  218_gauss_sample-num_sample-size_m4_r30_2p17.txt  218_gauss_sample-num_sample-size_m5_r30_2p17.txt  218_gauss_sample-num_sample-size_m6_r30_2p17.txt  218_sample-num_m2_r30_sample-size2p11.txt  218_sample-num_m3_r30_sample-size2p11.txt  218_sample-num_m4_r30_sample-size2p11.txt  218_sample-num_m5_r30_sample-size2p11.txt  218_sample-num_m6_r30_sample-size2p11.txt  218_sample-num_sample-size_m3_r30_2p17.txt  218_sample-num_sample-size_m4_r30_2p17.txt  218_sample-num_sample-size_m5_r30_2p17.txt  218_sample-num_sample-size_m6_r30_2p17.txt  219_sample-num_sample-size_m2_r30_2p17.txt  219_sample-num_sample-size_m3_r30_2p17.txt  219_sample-num_sample-size_m4_r30_2p17.txt  219_sample-num_sample-size_m5_r30_2p17.txt  219_sample-num_sample-size_m6_r30_2p17.txt  219_sample-size_m3_r30_sample-num2p10.txt  219_sample-size_m4_r30_sample-num2p10.txt  219_sample-size_m5_r30_sample-num2p10.txt  219_sample-size_m6_r30_sample-num2p10.txt
result/wsl/414/: sample-num_m2_r30_sample-size2p11.txt  sample-num_m3_r30_sample-size2p11.txt  sample-num_sample-size_m2_r30_2p17.txt  sample-num_sample-size_m3_r30_2p17.txt  sample-num_sample-size_m4_r30_2p17.txt  sample-num_sample-size_m5_r30_2p17.txt  sample-num_sample-size_m6_r30_2p17.txt  sample-size_m2_r30_sample-num2p10.txt  sample-size_m3_r30_sample-num2p10.txt  sample-size_m4_r30_sample-num2p10.txt  sample-size_m5_r30_sample-num2p10.txt  sample-size_m6_r30_sample-num2p10.txt  time_m2_r30_sample-size2p11.txt  time_m3_r30_sample-size2p11_sample-num2p10.txt  time_m4_r30_sample-size2p11_sample-num2p10.txt  time_m5_r30_sample-size2p11_sample-num2p10.txt  time_m6_r30_sample-size2p11_sample-num2p10.txt
script/: database.py  ex_error.py  ex_error_file.py  ex_r.py  init_database.py  run_ex_error.sh  run_ex_error_r0.3.sh  run_ex_error_sn64.sh  run_ex_error_ssmore.sh  run_ex_sample-size_n.py  run_ex_sample-size_n.sh  run_ex_sample-size_n_r01.sh  run_ex_sample-size_n_r02.sh  run_ex_sample-size_n_r03.sh  test_heuristic.py
src/: CMakeLists.txt  RangeTree.h  RangeTree2.h  dynamic_entropy.cpp  entropy.h  entropy_calculator.cpp  entropy_calculator.h  kdtree.cpp  kdtree.h  random_sampler.cpp  random_sampler.h  sampen.cpp  sampen_calculator.cpp  sampen_calculator.h  sampen_range_tree.cpp  sampen_var.cpp  sampenmodule.cpp  sampenmodule.h  setup.py  tensor.h  test_utils.cpp  utils.cpp  utils.h
(+100 files in other folders)
